--- a/frontend/army_mentoring/package.json
+++ b/frontend/army_mentoring/package.json
@@ -10,8 +10,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^1.1.5",
-    "sass": "^1.41.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
