[bug]: git flow 설치 오류 해결
<description>
컨테이너 생성 중 git flow 설치에 실패하는 오류 해결.
apt-get update 후 설치 진행하도록 함.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,4 +22,4 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
 
 # Set git environment
 RUN git config --global commit.template git-commit-template.txt
-RUN apt-get install git-flow
+RUN sudo apt-get update && apt-get install git-flow
