[update]: django pylint 오류 메시지 해결
<description>
pylint가 django의 settings를 찾지 못해 에러 메시지를 띄웠던 것 해결.
devcontainer에 환경 변수 설정하도록 추가함.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 		"python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
 		"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
 		"python.linting.pylintArgs":[
-			"--load-plugins=pylint_django"
+			"--load-plugins=pylint_django",
+			"--django-settings-module=config.settings",
 		],
 	},
 
