--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.12.4
 isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+Pillow==8.3.2
 platformdirs==2.3.0
 pylint==2.11.1
 pylint-django==2.4.4
