--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 astroid==2.8.0
 dj-database-url==0.5.0
 Django==3.2
+django-cors-headers==3.10.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
 isort==5.9.3
