--- a/frontend/army_mentoring/package.json
+++ b/frontend/army_mentoring/package.json
@@ -18,6 +18,7 @@
     "reactstrap": "^8.10.0",
     "sass": "^1.41.1",
     "sass-loader": "^12.1.0",
+    "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
