--- a/frontend/army_mentoring/package.json
+++ b/frontend/army_mentoring/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "global": "^4.4.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
@@ -20,7 +22,8 @@
     "sass-loader": "^12.1.0",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.15"
   },
   "scripts": {
     "start": "react-scripts start",
